# TimeRefracEval

./: .gitignore  README.md  TimeRefracEval.java  plot_voltage.m  run.sh
CARLsim_version/iz_fp_eval/: CMakeLists.txt  README.md  rebuild_stellate.sh
CARLsim_version/iz_fp_eval/scripts/: initOAT.m  plot_results.m  run_plot.m
CARLsim_version/iz_fp_eval/src/: main_iz_fp_eval.cpp
